--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -10,6 +10,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   @apply bg-slate-100;
+  background-color: rgb(246 243 239 / 58%);
+
 }
 
 code {
