--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -16,3 +16,12 @@
 .header-bg{
     background-color: rgb(224 217 207);
 }
+
+*::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Webkit browsers (Chrome, Safari) */
+}
+
+* {
+    scrollbar-width: none; /* Hide scrollbar for Firefox */
+    -ms-overflow-style: none; /* Hide scrollbar for Internet Explorer and Edge */
+}
